# leptos-pokemon

./: Cargo.toml  Trunk.toml  nginx.conf  nixpacks.toml  rust-analyzer.toml
src/: index.html  main.rs
