[package]
name = "pokemon-tgc-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.15", features = ["csr", "nightly"] }
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
thaw = { version = "0.3.4", features = ["csr"] }
